[tool.poetry]
name = "aiosbb"
version = "0.1.1"
description = "Asynchronous sys-botbase client/server framework in Python."
readme = "README.md"
authors = ["Z1R343L <jan2705g@egmail.com>", "6A-Realm <6arealm@gmail.com>"]
requires-python = ">=3.8"
keywords = ["sys-botbase", "Nintendo"]
license = {text = "MIT"}
packages = [
    { include = "aiosbb" },
    { include = "aiosbb/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
